2008-02-14 Chris Buccella  <buccella@linux.vnet.ibm.com>

	* getSchema.sh.pre.in:
	Fixed 1894061: Allow sfcb to use updated versions of the CIM Schema

2008-02-07 Chris Buccella  <buccella@linux.vnet.ibm.com>

	* cmpimacs.h:
	Fixed 1888889: Typo in sfcb's cmpimacs.h for CMSetObjectPath macro
	(bug found by Charles Bullis)

2008-01-31 Chris Buccella  <buccella@linux.vnet.ibm.com>

	* objectpath.c:
	Fixed 1883796: unused variables in objectpath.c

	* cimXmlGen.c:
	Fixed 1883826: getKeyValueTypePtr() always returns false for boolean 
	values
	
2008-01-30 Chris Buccella  <buccella@linux.vnet.ibm.com>

	* cimXmlRequest.c:
	Fixed 1879334: Memory leaks in cimXmlRequest.c (patch by Tim Potter)

	* brokerUpc:
	Fixed 1879454: Memory leaks in brokerUpc.c (patch by Tim Potter)

	* sfcbdump.c:
	Fixed 1883049: Memory leak in sfcbdump (patch by Tim Potter)
	
2008-01-29 Chris Buccella  <buccella@linux.vnet.ibm.com>

	* cimXmlGen.c, cimcClientSfcbLocal.c, classProvider.c, 
	classProviderMem.c, indCIMXMLHandler.c, objectImpl.c,
	objectImplSwapI32toP32.c:
	Fixed 1879319: various unused variable warnings
	(patch proposed by Tim Potter)
	
2008-01-29 Gary Readler <gdr@us.ibm.com>

	* httpAdapter.c:
	Fixed 1725489 sfcb sending zero sized chunks in response


2008-01-29 Gary Readler <gdr@us.ibm.com>

	* providerMgr.c:
	Fixed 1878340 sfcb does not complete chunked transfer sfcb hangs

2008-01-25 Chris Buccella  <buccella@linux.vnet.ibm.com>

	* msgqueue.c:
	Fixed 1879330: Uninitialised memory in spSendMsg() and spSendCtl()
	(patch by Tim Potter)
	
2008-01-24 Chris Buccella  <buccella@linux.vnet.ibm.com>

	* support.c:
	Fixed 1879262: SFCB does a double free when processing a request

2008-01-21 Gary Readler <gdr@us.ibm.com>
	* dbpAdapter.c,httpAdapter.c
	fIXED 1854481: bzero() is deprecated

2008-01-11 Sven Schuetz <sven@de.ibm.com>

	* cimXmlRequest.c, objectImpl.c:
	Fixed 1868692: embedded inst support broken

2008-01-10  Chris Buccella  <buccella@linux.vnet.ibm.com>
