@@ -206,18 +206,21 @@ static ClassRegister *newClassRegister(char *fname, char *ns)
          if (vrp->size==sizeof(ClVersionRecord) && vrp->type==HDR_Version) vRec=1;
          else if (vrp->size==sizeof(ClVersionRecord)<<24 && vrp->type==HDR_Version) {
             mlogf(M_ERROR,M_SHOW,"--- %s is in wrong endian format\n",fin);
+	    fclose(in);
             return NULL;
          }
       }
       
       if (vRec==0 && hdr.type!=HDR_Class) {
          mlogf(M_ERROR,M_SHOW,"--- %s contains non-class record(s)\n",fin);
+	 fclose(in);
          return NULL;
      }
       
       buf = (char *) malloc(hdr.size);
       if (buf==NULL) {
          mlogf(M_ERROR,M_SHOW,"--- %s contains record(s) that are too long\n",fin);
+	 fclose(in);
          return NULL;
       }
       
@@ -231,6 +234,7 @@ static ClassRegister *newClassRegister(char *fname, char *ns)
 	    memcpy(vrp,cr->vr,sizeof(ClVersionRecord));
             if (strcmp(cr->vr->id,"sfcb-rep")) {
                mlogf(M_ERROR,M_SHOW,"--- %s contains invalid version record - directory skipped\n",fin);
+	       fclose(in);
                return NULL;
             }   
             vRec=0;
@@ -245,6 +249,7 @@ static ClassRegister *newClassRegister(char *fname, char *ns)
             if (vrp) v=vrp->objImplLevel;
             mlogf(M_ERROR,M_SHOW,"--- %s contains unsupported object implementation format (%d) - directory skipped\n",
                fin,v);
+	    fclose(in);
             return NULL;
          }
 
@@ -266,10 +271,13 @@ static ClassRegister *newClassRegister(char *fname, char *ns)
       }
       else {
          mlogf(M_ERROR,M_SHOW,"--- %s contains invalid record(s) - directory skipped\n",fin);
+	 fclose(in);
          return NULL;
       }
    }
  
+   fclose(in);
+
    if (cr->vr) {
       mlogf(M_INFO,M_SHOW,"--- ClassProvider for %s (%d.%d) using %ld bytes\n", 
           fname, cr->vr->version, cr->vr->level, total);
