@@ -29,6 +29,7 @@ Bugs fixed:
 - 1883796 Fixed unused variables in objectpath.c
 - 1883826 Fixed getKeyValueTypePtr() always returns false for boolean values
 - 1888889 Fixed Typo in sfcb's cmpimacs.h for CMSetObjectPath macro
+- 1891702 Fixed various resource leaks
 
 Changes in 1.2.5
 ================
